--- a/e-bidding/package.json
+++ b/e-bidding/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
